misc4.0/etl/etl4/components/spire/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spire-system
  labels:
    openshift.io/cluster-monitoring: "true"
    argocd.argoproj.io/managed-by: openshift-gitops
