misc4.0/etl/etl4/components/spire/spire-server-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: spire-server
  namespace: spire-server
spec:
  host: spire-server.apps.${CLUSTER_BASE_DOMAIN}
  to:
    kind: Service
    name: spire-server
    weight: 100
  port:
    targetPort: grpc
  # tls:
  #   termination: edge
  #   insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
